--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-# Node.js
-/node_modules/
+# Node modules
+node_modules/
 
 # Build output
-/build/
 dist/
+build/
+
+# Logs
+logs
+*.log
+npm-debug.log*
 
 # Environment variables
 .env
@@ -12,21 +17,15 @@ dist/
 .env.test.local
 .env.production.local
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
 # IDE and editor files
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
-# macOS
+# OS generated files
 .DS_Store
-
-# Windows
 Thumbs.db
-ehthumbs.db
 
 # Coverage directory
 /coverage/
@@ -35,6 +34,9 @@ ehthumbs.db
 /.cache/
 
 
-
 # ML DIRS
-/ml/node_modules
+ml/node_modules
+ml/sev/cert.pem
+ml/sev/key.pem
+ml/sev/node_modules/
+ml/sev/package-lock.json
