--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "dd1_TESTS": "jest"
   },
   "eslintConfig": {
     "extends": [
