--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
+    "express": "^4.21.2",
+    "https": "^1.0.0",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
