--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
@@ -67,5 +69,5 @@
     "transformIgnorePatterns": [
       "/node_modules/(?!axios)/"
     ]
-  }  
+  }
 }
