--- a/ml/sev/package.json
+++ b/ml/sev/package.json
@@ -18,6 +18,10 @@
     "express": "4.21.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
