--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@agney/react-loading": "^0.1.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -17,6 +19,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
+    "firebase": "^11.3.1",
     "https": "^1.0.0",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
@@ -62,6 +65,7 @@
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "postcss": "^8.5.1",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.11"
   },
