--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-email/components": "^0.0.33",
+    "@react-email/html": "^0.0.11",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,6 +24,7 @@
     "firebase": "^11.3.1",
     "https": "^1.0.0",
     "lucide-react": "^0.474.0",
+    "node-cron": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
