--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.2.0",
     "https": "^1.0.0",
     "lucide-react": "^0.474.0",
     "node-cron": "^3.0.3",
@@ -39,8 +40,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite",
-    "dd1_TESTS": "jest"
+    "start": "node server.js",
+    "dd1_TESTS": "jest",
+    "cron": "node newsletter/cron.js"
   },
   "eslintConfig": {
     "extends": [
