--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "env": {
-      "test": {
-        "presets": ["@babel/preset-env", "@babel/preset-react"]
-      }
-    }
-  }
+  "presets": ["@babel/preset-env"]
+}
   
