--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server.js",
-    "dd1_TESTS": "jest",
-    "cron": "node newsletter/cron.js"
+    "dd1_TESTS": "jest --detectOpenHandles --forceExit --testTimeout=10000 --runInBand",
+    "cron": "node newsletter/cron.js",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -74,5 +75,10 @@
     "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.11"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": true,
+    "setupFilesAfterEnv": ["./jest.setup.js"]
   }
 }
